<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="wrap_content"
        android:layout_height="153dp"
        android:layout_marginStart="4dp"
        android:contentDescription="@string/movie_poster"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_title"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="16dp"
        android:text="@string/movie_title"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/movie_poster"
        app:layout_constraintStart_toStartOf="@id/movie_poster"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_description"
        android:layout_width="228dp"
        android:layout_height="95dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="12dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-light"
        android:maxLines="5"
        android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipisicing_elit_exercitationem_amet_ipsa_labore_veniam_aperiam_ipsam_et_aut_omnis_maxime_modi_voluptatibus_magnam_molestiae_sapiente_tempora_repellat_accusantium_necessitatibus_perspiciatis_alias"
        app:layout_constraintStart_toStartOf="@id/movie_poster"
        app:layout_constraintTop_toBottomOf="@id/movie_title" />

</androidx.constraintlayout.widget.ConstraintLayout>